<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/jieci_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/jieci_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_jieci_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/week_num_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/week_num_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_week_num_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/time_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/time_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/class_room_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/class_room_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/class_room_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/xueshi_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/xueshi_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xueshi_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/xuefen_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/xuefen_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xuefen_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/test_method_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/test_method_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/test_method" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/teacher_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/teacher_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/classed_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/classed_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/classes_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/others_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_only_text" />

            <EditText
                android:id="@+id/others_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/others_text" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_all_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_all_text" />
    </LinearLayout>

</ScrollView>